# coach_analysis

./: .gitignore  DAG_SCHEDULING_TABLE.md  README.md  app.py  coaching_analysis_ml.code-workspace  docker-compose.yml  environment.yml  ideas.txt  linkedinpost.txt  nba_pull.sqlite  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  environment.yml  install_quarto.sh
app/: main.py
dags/: nba_advanced_ingest.py  nba_api_ingest.py  nba_data_loader.py  nba_salary_pipeline.py
data/: nba_salary_limits.csv  players_list.csv
docs/: good_nba_endpoints.txt
notebooks/: claude_ex_salary_predict.ipynb  cluster_analysis.ipynb  model_per_season_checks.ipynb  modelbyseason2.ipynb  modular_data_pull.ipynb  nba_data_pull_modularized.ipynb  newpull.ipynb  old_salary_analysis_addons.ipynb  overall_trade_impact copy.ipynb  overall_trade_impact.ipynb  pto_ato_effectiveness.ipynb  pyspark_models.ipynb  q_learning_bot.ipynb  salary_predict_ml.ipynb  salary_prediction_model_app_updated_final.ipynb  salary_prediction_model_app_updated_final_maeupdated.ipynb  salary_stats_pull modularized.ipynb  salary_stats_pull modularized_minus_salary_updated_ ratelimited_dagged_finalchecks.ipynb  salary_stats_pull modularized_minus_salary_updated_ ratelimited_dagged_finalchecks_final.ipynb  salary_stats_pull modularized_original.ipynb  salary_stats_pull.ipynb  shot_effectiveness_app.ipynb  shot_effectiveness_chart.ipynb  shot_effectiveness_chart_maeupdate.ipynb  tester_train.ipynb  tester_train2.ipynb  trade_pull.ipynb  training.ipynb
src/: advanced_metrics.py  advanced_metrics_app.py  app.py  app_test_trade_impact.py  data_loader_preprocessor.py  data_utils.py  main.py  (+15 more)
(+243 files in other folders)
